[package]
name = "ghash"
version = "0.0.1"
authors = ["glatan <glatan.edu@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/glatan/ghash/"
homepage = "https://gitlab.com/glatan/ghash/"

[features]
default = [
    "blake",
    "blake2",
    "edonr",
    "keccak",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha0",
    "sha1",
    "sha2",
    "sha3"
]
minimal = [
    "blake/minimal",
    "blake2/minimal",
    "edonr/minimal",
    "keccak",
    "md2/minimal",
    "md4/minimal",
    "md5/minimal",
    "ripemd/minimal",
    "sha0/minimal",
    "sha1/minimal",
    "sha2/minimal",
    "sha3"
]

[dependencies]
blake = { path = "components/hashes/blake", optional = true }
blake2 = { path = "components/hashes/blake2", optional = true }
edonr = { path = "components/hashes/edonr", optional = true }
keccak = { path = "components/hashes/keccak", optional = true }
md2 = { path = "components/hashes/md2", optional = true }
md4 = { path = "components/hashes/md4", optional = true }
md5 = { path = "components/hashes/md5", optional = true }
ripemd = { path = "components/hashes/ripemd", optional = true }
sha0 = { path = "components/hashes/sha0", optional = true }
sha1 = { path = "components/hashes/sha1", optional = true }
sha2 = { path = "components/hashes/sha2", optional = true }
sha3 = { path = "components/hashes/sha3", optional = true }
utils = { path = "components/utils" }

[workspace]
members = [
    "components/hashes/blake",
    "components/hashes/blake2",
    "components/hashes/edonr",
    "components/hashes/keccak",
    "components/hashes/md2",
    "components/hashes/md4",
    "components/hashes/md5",
    "components/hashes/ripemd",
    "components/hashes/sha0",
    "components/hashes/sha1",
    "components/hashes/sha2",
    "components/hashes/sha3",
    "components/dev-utils",
    "components/utils",

    "examples/hashsum",
]
