[package]
name = "ghash"
version = "0.0.1"
readme = "README.md"
edition = "2021"

[workspace.package]
authors = ["glatan <glatan@protonmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "Apache-2.0 OR MIT"
homepage = "https://gitlab.com/glatan/ghash/"
repository = "https://gitlab.com/glatan/ghash/"

[features]
default = [
    "blake",
    "blake2",
    "edonr",
    "keccak",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha0",
    "sha1",
    "sha2",
    "sha3"
]
minimal = [
    "blake/minimal",
    "blake2/minimal",
    "edonr/minimal",
    "keccak",
    "md2/minimal",
    "md4/minimal",
    "md5/minimal",
    "ripemd/minimal",
    "sha0/minimal",
    "sha1/minimal",
    "sha2/minimal",
    "sha3"
]

[dependencies]
blake = { path = "crate/hashes/blake", optional = true }
blake2 = { path = "crate/hashes/blake2", optional = true }
edonr = { path = "crate/hashes/edonr", optional = true }
keccak = { path = "crate/hashes/keccak", optional = true }
md2 = { path = "crate/hashes/md2", optional = true }
md4 = { path = "crate/hashes/md4", optional = true }
md5 = { path = "crate/hashes/md5", optional = true }
ripemd = { path = "crate/hashes/ripemd", optional = true }
sha0 = { path = "crate/hashes/sha0", optional = true }
sha1 = { path = "crate/hashes/sha1", optional = true }
sha2 = { path = "crate/hashes/sha2", optional = true }
sha3 = { path = "crate/hashes/sha3", optional = true }
utils = { path = "crate/utils" }

[workspace]
members = [
    "crate/hashes/blake",
    "crate/hashes/blake2",
    "crate/hashes/edonr",
    "crate/hashes/keccak",
    "crate/hashes/md2",
    "crate/hashes/md4",
    "crate/hashes/md5",
    "crate/hashes/ripemd",
    "crate/hashes/sha0",
    "crate/hashes/sha1",
    "crate/hashes/sha2",
    "crate/hashes/sha3",
    "crate/dev-utils",
    "crate/utils",
]
