[package]
name = "ghash"
version = "0.0.1"
readme = "README.md"
edition = "2021"

[workspace.package]
authors = ["glatan <glatan@protonmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "Apache-2.0 OR MIT"
homepage = "https://gitlab.com/glatan/ghash/"
repository = "https://gitlab.com/glatan/ghash/"

[features]
default = [
    "blake",
    "blake2",
    "edonr",
    "keccak",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha0",
    "sha1",
    "sha2",
    "sha3"
]
minimal = [
    "blake/minimal",
    "blake2/minimal",
    "edonr/minimal",
    "keccak",
    "md2/minimal",
    "md4/minimal",
    "md5/minimal",
    "ripemd/minimal",
    "sha0/minimal",
    "sha1/minimal",
    "sha2/minimal",
    "sha3"
]

[dependencies]
blake = { path = "crate/hash/blake", optional = true }
blake2 = { path = "crate/hash/blake2", optional = true }
edonr = { path = "crate/hash/edonr", optional = true }
keccak = { path = "crate/hash/keccak", optional = true }
md2 = { path = "crate/hash/md2", optional = true }
md4 = { path = "crate/hash/md4", optional = true }
md5 = { path = "crate/hash/md5", optional = true }
ripemd = { path = "crate/hash/ripemd", optional = true }
sha0 = { path = "crate/hash/sha0", optional = true }
sha1 = { path = "crate/hash/sha1", optional = true }
sha2 = { path = "crate/hash/sha2", optional = true }
sha3 = { path = "crate/hash/sha3", optional = true }
util = { path = "crate/util" }

[workspace]
members = [
    "crate/hash/blake",
    "crate/hash/blake2",
    "crate/hash/edonr",
    "crate/hash/keccak",
    "crate/hash/md2",
    "crate/hash/md4",
    "crate/hash/md5",
    "crate/hash/ripemd",
    "crate/hash/sha0",
    "crate/hash/sha1",
    "crate/hash/sha2",
    "crate/hash/sha3",
    "crate/dev-util",
    "crate/util",
]
