[package]
name = "sha3"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
utils = { path = "../../utils" }
keccak = { path = "../keccak" }

[dev-dependencies]
dev-utils = { path = "../../dev-utils" }
