[package]
name = "edonr"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
minimal = []

[dependencies]
util = { path = "../../util" }

[dev-dependencies]
dev-util = { path = "../../dev-util" }
