[package]
name = "sha0"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
minimal = []

[dependencies]
utils = { path = "../../utils" }

[dev-dependencies]
dev-utils = { path = "../../dev-utils" }
